kubernetes/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---

# Prometheus Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
      #   volumeMounts:
      #   - name: prometheus-config
      #     mountPath: /etc/prometheus
      #   - name: shared-storage
      #     mountPath: /prometheus
      # volumes:
      # - name: prometheus-config
      #   configMap:
      #     name: prometheus-config
      # - name: shared-storage
      #   persistentVolumeClaim:
      #     claimName: shared-pvc

---

# Prometheus Service
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090
    targetPort: 9090

---

# Grafana Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        # volumeMounts:
        # - name: grafana-config
        #   mountPath: /etc/grafana
        #   readOnly: true
        # - name: shared-storage
        #   mountPath: /var/lib/grafana
      # volumes:
      # - name: grafana-config
      #   configMap:
      #     name: grafana-config
      # - name: shared-storage
      #   persistentVolumeClaim:
      #     claimName: shared-pvc

---

# Grafana Service
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

# Persistent Volume Claim
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: shared-pvc
#   namespace: monitoring
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 5Gi
